📝 Add hero image for "Displaying Mermaid charts in Gatsby"

--- a/src/content/blog/drafts/displaying-mermaid-charts-in-gatsby/displaying-mermaid-charts-in-gatsby.mdx
+++ b/src/content/blog/drafts/displaying-mermaid-charts-in-gatsby/displaying-mermaid-charts-in-gatsby.mdx
@@ -5,6 +5,13 @@ slug: 'displaying-mermaid-charts-in-gatsby'
 type: Post
 status: Draft
 description: ''
+image:
+  source: ./two-people-facing-an-art-exhibit-of-a-difficult-to-follow-diagram-connecting-various-blocks-of-text.jpg
+  alt: Two people facing an art exhibit of a difficult to follow diagram connecting various blocks of text
+  attribution:
+    author: charlesdeluvio
+    sourceName: Unsplash
+    sourceUrl: https://unsplash.com/photos/OWkXt1ikC5g
 ---
 
 I like diagrams. I find they do a great job explaining my thought processes and giving a better understanding to what are often abstract systems. The problem I have with most diagrams (and diagramming tools) is that they often have a short shelf-life. Diagrams are typically stored as flat files (e.g. a `.jpg`) and when the diagram becomes out of date, it becomes a chore to find the original file to update it. Diagramming tooling is often gated by logins and licenses. Because the files aren't text, it's also hard to describe differences between an original diagram and an updated diagram with a tool like Git.
