📝 Add hero image for "CodeMirror and React"

--- a/src/content/blog/drafts/codemirror-and-react/codemirror-and-react.mdx
+++ b/src/content/blog/drafts/codemirror-and-react/codemirror-and-react.mdx
@@ -5,6 +5,13 @@ slug: 'codemirror-and-react'
 type: Post
 status: Draft
 description: ''
+image:
+  source: ./a-hand-reaching-out-and-almost-touching-a-mirror.jpg
+  alt: a hand reaching out and almost touching a mirror
+  attribution:
+    author: Михаил Секацкий
+    sourceName: Unsplash
+    sourceUrl: https://unsplash.com/photos/OwR9cyMNe4c
 ---
 
 Over the past 10 months, I've been working with the [CodeMirror](https://codemirror.net/) framework to write and integrate a custom code editor into a React app. Coming from a React background, CodeMirror presented some unique challenges. I've spend many hours staring at [the docs](https://codemirror.net/docs/) and going in circles over how to get React and CodeMirror to play nicely. This article is meant to be a primer for any developers who are going to integrate CodeMirror into React–it contains many of the lessons I've learned and will hopefully act as a springboard to writing your own CodeMirror-powered editor.
