📝 Add hero image for "Connecting ANTLR to CodeMirror 6: Building a Language Server"

--- a/src/content/blog/drafts/connecting-antlr-to-codemirror-6-building-a-language-server/connecting-antlr-to-codemirror-6-building-a-language-server.mdx
+++ b/src/content/blog/drafts/connecting-antlr-to-codemirror-6-building-a-language-server/connecting-antlr-to-codemirror-6-building-a-language-server.mdx
@@ -5,6 +5,13 @@ date: 2023-05-10
 type: Post
 status: Draft
 description: How to connect ANTLR to CodeMirror
+image:
+  alt: a group of tall buildings under a cloudy blue sky
+  source: ./a-group-of-tall-buildings-under-a-cloudy-blue-sky.jpg
+  attribution:
+    author: C Dustin
+    sourceName: Unsplash
+    sourceUrl: https://unsplash.com/photos/91AQt9p4Mo8
 ---
 
 For the past 18 months, I’ve been working on [ShopifyQL Notebooks](https://apps.shopify.com/shopifyql-notebooks), a data exploration tool offered by Shopify. The tool enables Shopify merchants to query their data in a [Jupiter-esque notebook](https://jupyter.org/) using [ShopifyQL](https://shopify.dev/docs/api/shopifyql/shopifyql-reference), a SQLish language that was developed in-house. One of the biggest challenges in creating ShopifyQL Notebooks was building a functional code editor with all of the bells and whistles you’d expect from a world class editor.
