📝 Add hero image for "Connecting ANTLR to CodeMirror 6: Connecting a Language Server"

--- a/src/content/blog/drafts/connecting-antlr-to-code-mirror-6-connecting-a-language-server/connecting-antlr-to-code-mirror-6-connecting-a-language-server.mdx
+++ b/src/content/blog/drafts/connecting-antlr-to-code-mirror-6-connecting-a-language-server/connecting-antlr-to-code-mirror-6-connecting-a-language-server.mdx
@@ -5,6 +5,13 @@ date: 2023-05-24
 type: Post
 status: Draft
 description: Connect ANTLR to CodeMirror via a ParseAdapter
+image:
+  alt: bridge between two buildings in Berlin
+  source: bridge-between-two-buildings-in-Berlin.jpg
+  attribution:
+    author: Will Tarpey
+    sourceName: Unsplash
+    sourceUrl: https://unsplash.com/photos/7h2YTknTSzU
 ---
 
 <Callout>
