📝 Terminology section in About page

--- a/src/content/pages/about/about.mdx
+++ b/src/content/pages/about/about.mdx
@@ -1,8 +1,8 @@
 ---
-title: "About"
-slug: "about"
+title: 'About'
+slug: 'about'
 type: Page
-description: ""
+description: ''
 image:
   source: ./trevor-standing-in-field.jpg
   alt: Camel train going through the desert
@@ -62,6 +62,7 @@ The most notable experience we had as a band was opening for a favorite band at 
 Jordan and I both took time off of college for [service missions](https://newsroom.churchofjesuschrist.org/article/mission) for our church, and when we returned we reunited under the name Jefferson & York (derived from two streets from our service missions). We eventually brought on [Jordan Saltmarsh](https://www.jordansaltmarshdrums.com/) to play drums and rotated through several bassists as we pursued a more "full band" sound.
 
 We released two EPs:
+
 1. [Jefferson & York: Unplugged](https://soundcloud.com/jeffersonandyork/sets/unplugged-ep)
 2. [The Backyard EP](https://open.spotify.com/album/0WEod59ULOzfjJiZS6AJ9F?si=LaQ0rNzoTyy0g8_IndR9gQ)
 
@@ -98,8 +99,8 @@ A favorite memory for my time with the band comes from when we were about to rel
 After leaving Michael Barrow & the Tourists (and after moving to LA), I ended up playing as a guitarist with Kyle Leach's band The Last Seconds. All of the bands up until that point had been groups that wrote and played original music, whereas The Last Seconds was primarly a cover band. I had an absolute blast getting to play covers at local dive bars and family reunions.
 
 <TwoUp>
-![Last seconds 1](./music/last-seconds-1.jpg)
-![Last seconds 2](./music/last-seconds-2.jpg)
+  ![Last seconds 1](./music/last-seconds-1.jpg) ![Last seconds
+  2](./music/last-seconds-2.jpg)
 </TwoUp>
 
 ### Trevor Harmon (2020-present)
@@ -130,16 +131,25 @@ In October 2010 until October 2012 I served [a mission](https://newsroom.churcho
 
 ### Lay ministry
 
-The church has a [lay ministry](https://newsroom.churchofjesuschrist.org/article/mormon-lay-ministry), where all of the leaders of the church are not ordained ministers but instead are volunteers from the congregation. Sunday services don't feature a central pastor figure, but instead feature messages from individuals in the congregation. Occasionally I am asked to participate by speaking on a particular message, and some of those messages I will adapt into blog posts.
+The church has a [lay ministry](https://newsroom.churchofjesuschrist.org/article/mormon-lay-ministry), where all of the leaders of the church are not ordained ministers but instead are volunteers from the congregation. Sunday services don't feature a central pastor figure, but instead feature messages from individuals in the congregation. Occasionally I am asked to participate by speaking on a particular message, and some of those messages I will adapt into blog posts. In those posts, the referenced bible verses will usually come from the King James Version of the bible, unless otherwise noted.
+
+### Terminology
+
+The church has terminology that may be unfamiliar to some readers. This is a running list of the terms you may encounter in some of my blog posts, and what they mean (in no particular order):
+
+- **Ward:** the most basic unit of the church. A synonomous term used by other churches is congregation. Wards are generally organized by geography. When a congregation is not big enough to be considered a ward, it is called a branch.
+- **Stake:** a collection of wards in a geographic area. Stakes generally include 6-9 units (branches or wards).
+- **Stake President:** the leader of a stake.
+- **High council:** a group of twelve men from various units of a stake that come together and focus on the needs of the stake, as directed by the stake president. High councillors are often assigned a unit that isn't their "home" unit to shepherd and provide training.
+- **General conference:** A bi-annual conference where the entire church gets together for a weekend (Saturday & Sunday) to hear messages from leaders of the church. The conference is held in Salt Lake City, UT, and most members watch a broadcast on various streaming services.
+- **Ministering:** A program in the church where we are assigned to watch over and care for other families in the church. The spirit of the program is to focus on love and friendship for our fellow members.
+- **Temple:** A sacred building built for worship services. A temple is distinct from a meetinghouse; meetinghouses are for weekly services & every day activities, whereas a temple is built exclusively for worship experiences that center around making promises to follow Jesus Christ in a higher way. The most iconic temple is (probably) [the Salt Lake City temple](https://churchofjesuschristtemples.org/salt-lake-temple/).
 
 ## Etcs
 
 I have a dog (mini sheepadoodle) named Poppy. She is a sweetheart of a dog and also a total nut. She does this thing where she frantically waves her paws when she wants something (pictured in the gif below).
 
-<TwoUp>
-![begging](./poppy-begging.gif)
-![smiling](./happy-poppy.jpg)
-</TwoUp>
+<TwoUp>![begging](./poppy-begging.gif) ![smiling](./happy-poppy.jpg)</TwoUp>
 
 ## Contact
 
