📝 Published "What I've been up to lately"

--- a/src/content/blog/2023/what-ive-been-up-to-lately/what-ive-been-up-to-lately.mdx
+++ b/src/content/blog/2023/what-ive-been-up-to-lately/what-ive-been-up-to-lately.mdx
@@ -1,9 +1,9 @@
 ---
 title: "What I've been up to lately"
-date: 2023-05-01
+date: 2023-07-21
 slug: 'what-ive-been-up-to-lately'
 type: Post
-status: Draft
+status: Published
 description: 'I took a break from my blog for 3 years. What did I do in the meantime?'
 image:
   source: ./clingmans-dome.jpg
