📝 Publish Learning CodeMirror

--- a/src/content/blog/2023/learning-codemirror/learning-codemirror.mdx
+++ b/src/content/blog/2023/learning-codemirror/learning-codemirror.mdx
@@ -1,9 +1,9 @@
 ---
 title: 'Learning CodeMirror'
-date: 2023-05-02
+date: 2023-09-20
 slug: 'learning-codemirror'
 type: Post
-status: Draft
+status: Published
 description: 'An introduction to CodeMirror, with practical examples of its primitives.'
 image:
   source: ./hand-holding-a-lightbulb-that-is-not-illuminated.jpg
